--- a/quiz_app_project/Base.lproj/LaunchScreen.storyboard
+++ b/quiz_app_project/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="126-2" translatesAutoresizingMaskIntoConstraints="NO" id="IRx-dG-UjP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="126-2" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IRx-dG-UjP">
                                 <rect key="frame" x="0.0" y="325" width="414" height="260"/>
                             </imageView>
                         </subviews>
